# aironsuit

./: .gitignore  Dockerfile  LICENSE  README.md  backend.py  pyproject.toml  requirements.txt  setup.py  suit.py
.github/workflows/: code_style.yml  test.yml
aironsuit/: _utils.py  backend.py  callbacks.py  suit.py  trainers.py
aironsuit.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aironsuit/callbacks/: __init__.py  callbacks.py  callbacks_tf.py  callbacks_torch.py
aironsuit/design/: utils.py
aironsuit/models/: __init__.py  models_tf.py  models_torch.py
aironsuit/trainers/: __init__.py  trainers.py  trainers_tf.py  trainers_torch.py
aironsuit/utils/: utils_tf.py  utils_torch.py
callbacks/: __init__.py  callbacks_tf.py  callbacks_torch.py
docs/_build/rinoh/: AIronSuit.rtc  AIronSuit.stylelog
docs/_build/rinoh/.doctrees/: environment.pickle  index.doctree
docs/source/: conf.py  index.rst
examples/: advanced_airontools.py  advanced_airontools_mnist.py  advanced_airontools_mnist_tf.py  ae_mnist.py  ae_mnist_tf.py  classification_mnist.py  classification_mnist_tf.py  ensemble_mnist_classification.py  mnist.py  simple_classification_mnist_tf.py  simple_mnist.py  simplest_classification_mnist_tf.py  simplest_example.py  simplest_mnist.py  simplest_mnist_torch.py  standard_classification_pipeline.py  time_series_classification.py  time_series_classification_tf.py  toptal.py  variational_ae_mnist.py  variational_ae_mnist_tf.py
examples/lightning_logs/version_0/: events.out.tfevents.1629056452.claudi-Lenovo-Y50-70.65497.0
examples/lightning_logs/version_1/: events.out.tfevents.1629630191.claudi-Lenovo-Y50-70.54342.0
examples/lightning_logs/version_10/: events.out.tfevents.1629636333.claudi-Lenovo-Y50-70.57931.0
examples/lightning_logs/version_11/: events.out.tfevents.1630586571.claudi-Lenovo-Y50-70.244839.0
examples/lightning_logs/version_12/: events.out.tfevents.1630586788.claudi-Lenovo-Y50-70.245095.0
examples/lightning_logs/version_13/: events.out.tfevents.1630588011.claudi-Lenovo-Y50-70.246242.0
examples/lightning_logs/version_14/: events.out.tfevents.1630588419.claudi-Lenovo-Y50-70.246633.0
examples/lightning_logs/version_15/: events.out.tfevents.1630588462.claudi-Lenovo-Y50-70.246715.0
examples/lightning_logs/version_16/: events.out.tfevents.1630588609.claudi-Lenovo-Y50-70.246828.0
examples/lightning_logs/version_17/: events.out.tfevents.1630588645.claudi-Lenovo-Y50-70.246874.0
examples/lightning_logs/version_18/: events.out.tfevents.1630588758.claudi-Lenovo-Y50-70.247064.0
examples/lightning_logs/version_19/: events.out.tfevents.1632041561.claudi-Lenovo-Y50-70.727300.0
examples_tf/: advanced_airontools_mnist_tf.py  ae_mnist_tf.py  simple_classification_mnist_tf.py  simple_mnist_tf.py  simplest_classification_mnist_tf.py  simplest_mnist_tf.py  standard_classification_pipeline.py  time_series_classification_tf.py  vae.py  variational_ae_mnist_tf.py
examples_torch/: simplest_mnist_torch.py
integration/: applications.py  applications_test.py  utils.py
tests/: test_callbacks.py  test_examples.py
trainers/: __init__.py  trainers_tf.py
utils/: __init__.py  utils_tf.py
(+60 files in other folders)
