# pyproject.toml

[tool.poetry]
name = "aironsuit"
version = "0.1.20"
description = "AIronSuit (Beta) is a Python library for automatic model design/selection and visualization purposes built to work with tensorflow as a backend."
authors = ["Claudi Ruiz Camps <claudi_ruiz@hotmail.com>"]
repository = "https://github.com/AtrejuArtax/aironsuit"
classifiers= [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.8.10,<3.10"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
protobuf = "^3.20"
numpy = "*"
pandas = "*"
sklearn = "*"
tensorflow = "2.7.0"
tensorboard = "2.7.0"
tensorflow_datasets = "*"
airontools = "0.1.17"
hyperopt = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"