# pyproject.toml

[tool.poetry]
name = "aironsuit"
version = "0.1.20"
description = "AIronSuit (Beta) is a Python library for automatic model design/selection and visualization purposes built to work with tensorflow as a backend."
authors = ["Claudi Ruiz Camps <claudi_ruiz@hotmail.com>"]
repository = "https://github.com/AtrejuArtax/aironsuit"
classifiers= [
        "License :: OSI Approved :: BSD License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = "=3.9.18"
tensorflow = {version = "2.13", markers = "sys_platform != 'darwin'"}
tensorflow-macos = {version = "2.13", markers = "sys_platform == 'darwin'"}
hyperopt = "^0.2.7"
airontools = "^0.1.37"
pandas = "^2.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pip = "^23.1.2"
black = "^23.3.0"
twine = "^4.0.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"